# BedrockOptimizer

./: CMakeLists.txt  README.md  changelog.md
.github/workflows/: cmake-build.yml
src/: BetterBDSMod.cpp  OptCommand.cpp  Plugin.cpp  config.json  dllmain.cpp
src/include/: BetterBDSMod.h  Version.h  pch.h
src/opts/: ActorOpt.cpp  EntitySystemOpt.cpp  HopperOpt.cpp  PistionOpt.cpp  RandomTickOpt.cpp  RedstoneOpt.cpp
src/remotery/: Remotery.h
